[gd_scene load_steps=2 format=3 uid="uid://bn6ubvqhgtk26"]

[ext_resource type="Script" path="res://MainMenu/JoinMenu.gd" id="1_hj34j"]

[node name="Node2D" type="Node2D"]

[node name="JoinControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 646.0
script = ExtResource("1_hj34j")

[node name="Panel" type="Panel" parent="JoinControl"]
layout_mode = 0
offset_left = 128.0
offset_top = 64.0
offset_right = 1024.0
offset_bottom = 568.0

[node name="Label" type="Label" parent="JoinControl"]
layout_mode = 0
offset_left = 320.0
offset_top = 144.0
offset_right = 832.0
offset_bottom = 205.0
theme_override_font_sizes/font_size = 42
text = "Please input host IP"
horizontal_alignment = 1

[node name="BackButton" type="Button" parent="JoinControl"]
layout_mode = 0
offset_left = 320.0
offset_top = 384.0
offset_right = 512.0
offset_bottom = 448.0
text = "Back"

[node name="SubmitButton" type="Button" parent="JoinControl"]
layout_mode = 0
offset_left = 632.0
offset_top = 384.0
offset_right = 835.0
offset_bottom = 448.0
text = "Submit"

[node name="AddressInput" type="LineEdit" parent="JoinControl"]
layout_mode = 0
offset_left = 312.0
offset_top = 256.0
offset_right = 840.0
offset_bottom = 320.0
